backend/src/main/java/com/example/backend/controller/error/exception/articlecomment/NoArticleCommentException.java
package com.example.backend.controller.error.exception.articlecomment;

public class NoArticleCommentException extends RuntimeException{

}
